--- a/app.json
+++ b/app.json
@@ -37,6 +37,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "d6536322-edca-475f-b9ec-0602a32eb96f"
+      }
     }
   }
 }
